[build-system]
requires = [
        "hatchling", 
        "numpy",
        "sympy",
        "matplotlib"
]
build-backend = "hatchling.build"

[project]
name = "pyRBM"
version = "0.0.2"
authors = [
  { name="James Flynn", email="jameswflynn@hotmail.co.uk" },
]
description = "A Python framework to build and simulate stochastic rules-based models"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/Jamesflynn1/pyRBM/"
Issues = "https://github.com/Jamesflynn1/pyRBM/issues"